--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
-<html lang = 'en'>
-<head>  
-    <meta charset='UTF-8'>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>URL-Shortner</title> 
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
-
 <body>
-    <div class="container">
-        <h1>URL-Shortner</h1>
-        <form action="/shortURLs" method="POST">
-            <label for="fullURL">URL</label>
-            <input required placeholder="URL" type="url" name="fullURL" id="fullURL">
-            <button type="submit">Shorten</button>
-        </form>
-
-        <table>
-            <thread>
-                <tr>
-                    <th>Full URL</th>
-                    <th>Shortened</th>
-                    <th>Clicks<th>
-                </tr>
-            </thread>
-            <tbody>
-                <tr>
-                    <td><a href="https://google.com">https://google.com</a></td>
-                    <td><a href="/12345">123456</a>></td>
-                    <td>10</td>
-                </tr>
-            </tbody>
-      </table>
-    </div>
+  <div class="container">
+    <h1>URL Shrinker</h1>
+    <form action="/shortUrls" method="POST" >
+      <label for="fullUrl">Url</label>
+      <input required placeholder="Url" type="url" name="fullUrl" id="fullUrl" >
+      <button class="btn btn-success" type="submit">Shrink</button>
+    </form>
+    
+    <table class="table table-striped table-responsive">
+      <thead>
+        <tr>
+          <th>Full URL</th>
+          <th>Short URL</th>
+          <th>Clicks</th>
+        </tr>
+      </thead>
+      <tbody>
+        <% shortUrls.forEach(shortUrl => { %>
+          <tr>
+            <td><a href="<%= shortUrl.full %>"><%= shortUrl.full %></a></td>
+            <td><a href="<%= shortUrl.short %>"><%= shortUrl.short %></a></td>
+            <td><%= shortUrl.clicks %></td>
+          </tr>
+        <% }) %>
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
